--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
+html, body, #__next {
+  height: 100%;
+}
+body {
+  margin: 0;
+  /* evita que body haga scroll si delegas el scroll al main */
+  overflow: hidden;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,8 +16,6 @@
     text-wrap: balance;
   }
 }
-
-
 
 @layer base {
   :root {
